--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.4.1"
+    "react-test-renderer": "^16.4.1",
+    "express": "^4.16.3",
+    "request": "^2.87.0"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "express": "^4.16.3",
-    "request": "^2.87.0",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
