--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-test-renderer": "^16.4.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
