--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cors": "^2.8.4",
+    "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "express": "^4.16.3",
+    "react-html-parser": "^2.0.2",
     "request": "^2.87.0"
   },
   "scripts": {
